--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AvR-asadvriya",
-  "name": "AvR - Md. Asad Chowdhary",
+  "short_name": "AvR",
+  "name": "AvR (asadvriya)",
   "icons": [
     {
       "src": "favicon.ico",
